--- a/discount.html
+++ b/discount.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Special Offer | KWebDevelopment</title>
   <meta name="description" content="Get a discount on your next project. Limited-time offer for new and returning customers." />
+  <link rel="icon" href="favicon.ico" sizes="any" />
+  <link rel="icon" href="favicon.svg" type="image/svg+xml" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="assets/css/toolkit.css" />
 </head>
@@ -15,12 +17,16 @@
       <div class="logo"><a href="index.html">KWebDevelopment</a></div>
       <div class="links">
         <a href="index.html#services">Services</a>
-        <a href="services/index.html">All Services</a>
+        <a href="index.html#process">Process</a>
+        <a href="index.html#pricing">Pricing</a>
         <a href="index.html#contact">Contact</a>
+        <a href="review.html">Review</a>
+        <a href="discount.html">Offer</a>
+        <a href="privacy.html">Privacy</a>
       </div>
       <div class="nav-cta tk-nav-cta">
         <a class="btn tk-btn-call" href="#">Call</a>
-        <a class="btn primary tk-btn-quote" href="index.html#contact" data-tk-open-lead>Get Free Quote</a>
+        <a class="btn primary tk-btn-quote" href="#" data-tk-open-lead>Get Free Quote</a>
       </div>
     </nav>
   </div>
@@ -77,8 +83,12 @@
 </main>
 
 <footer>
-  <div class="wrap small">
-    <a href="privacy.html">Privacy &amp; SMS</a> · Built by KWebDevelopment · TX / DFW
+  <div class="wrap">
+    <a href="privacy.html">Privacy</a>
+    <a href="review.html">Review</a>
+    <a href="discount.html">Offer</a>
+    <a href="#" class="btn primary tk-btn-quote" data-tk-open-lead>Get Free Quote</a>
+    <span class="small">Built by KWebDevelopment · TX / DFW</span>
   </div>
 </footer>
 
