--- a/index.html
+++ b/index.html
@@ -5,26 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>KWebDevelopment | TX Web Design for Local Businesses</title>
   <meta name="description" content="KWebDevelopment builds fast, modern websites for local businesses in Texas. Mobile-first design, speed, and SEO basics included." />
+  <meta property="og:title" content="KWebDevelopment | TX Web Design for Local Businesses" />
+  <meta property="og:description" content="Fast, modern websites for local businesses in Texas. Mobile-first, SEO, and lead capture included." />
+  <meta property="og:type" content="website" />
+  <link rel="icon" href="favicon.ico" sizes="any" />
+  <link rel="icon" href="favicon.svg" type="image/svg+xml" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="assets/css/toolkit.css" />
 </head>
-
 <body>
 <header>
   <div class="wrap">
     <nav>
-      <div class="logo">KWebDevelopment</div>
+      <div class="logo"><a href="index.html">KWebDevelopment</a></div>
 
       <div class="links">
-        <a href="#services">Services</a>
-        <a href="#process">Process</a>
-        <a href="#pricing">Pricing</a>
-        <a href="#contact">Contact</a>
+        <a href="index.html#services">Services</a>
+        <a href="index.html#process">Process</a>
+        <a href="index.html#pricing">Pricing</a>
+        <a href="index.html#contact">Contact</a>
+        <a href="review.html">Review</a>
+        <a href="discount.html">Offer</a>
+        <a href="privacy.html">Privacy</a>
       </div>
 
       <div class="nav-cta tk-nav-cta">
         <a class="btn tk-btn-call" href="#" data-tk-call>Call</a>
-        <a class="btn primary tk-btn-quote" href="#contact" data-tk-open-lead>Get Free Quote</a>
+        <a class="btn primary tk-btn-quote" href="#" data-tk-open-lead>Get Free Quote</a>
       </div>
     </nav>
   </div>
@@ -40,15 +47,12 @@
           I build clean, modern websites for local businesses in Texas—optimized for mobile, speed,
           and SEO basics so you can look legit and book more work.
         </p>
-
         <div class="cta-row">
-          <a class="btn primary tk-btn-quote" href="#contact" data-tk-open-lead>Get a Free Quote</a>
+          <a class="btn primary tk-btn-quote" href="index.html#contact" data-tk-open-lead>Get Free Quote</a>
           <a class="btn tk-btn-call" href="#">Call</a>
         </div>
-
         <p class="muted top12">Email: kwebdevelopmenttx@gmail.com · <a href="privacy.html" class="link">Privacy</a></p>
       </div>
-
       <div class="card">
         <strong>Quick Wins Included</strong>
         <ul>
@@ -65,8 +69,7 @@
   <section id="services" class="scroll-margin">
     <div class="wrap">
       <h2>Services</h2>
-      <p class="muted">Simple packages that help local businesses in TX get more leads.</p>
-
+      <p class="section-lead muted">Simple packages that help local businesses in TX get more leads.</p>
       <div class="grid cards top16">
         <div class="card">
           <strong>Starter Website</strong>
@@ -89,33 +92,133 @@
           <p class="muted">On-page setup so Google understands your services.</p>
         </div>
         <div class="card">
-          <strong>Edits & Updates</strong>
+          <strong>Edits &amp; Updates</strong>
           <p class="muted">Quick changes when you need them.</p>
         </div>
       </div>
+      <p class="top16"><a href="services/index.html" class="link">View all services →</a></p>
     </div>
   </section>
 
   <section id="process" class="scroll-margin">
     <div class="wrap">
       <h2>How it works</h2>
-
-      <div class="grid two top16">
-        <div class="card">
-          <strong>1) Quick call</strong>
+      <p class="section-lead muted">From audit to launch and beyond.</p>
+      <div class="process-grid">
+        <div class="process-step">
+          <div class="icon" aria-hidden="true">1</div>
+          <strong>Audit &amp; plan</strong>
           <p class="muted">We talk goals, services, area (TX/DFW), and what makes you different.</p>
         </div>
-        <div class="card">
-          <strong>2) Build + review</strong>
-          <p class="muted">I build the site, then you review and request changes.</p>
+        <div class="process-step">
+          <div class="icon" aria-hidden="true">2</div>
+          <strong>Build &amp; launch</strong>
+          <p class="muted">I build the site, you review and request changes. Then we go live.</p>
         </div>
-        <div class="card">
-          <strong>3) Launch</strong>
-          <p class="muted">Domain connected, site goes live, tracking added if you want it.</p>
+        <div class="process-step">
+          <div class="icon" aria-hidden="true">3</div>
+          <strong>Local SEO pages</strong>
+          <p class="muted">Service and area pages so you show up when people search nearby.</p>
         </div>
-        <div class="card">
-          <strong>4) Improve</strong>
-          <p class="muted">Add pages, reviews, photos, and SEO over time.</p>
+        <div class="process-step">
+          <div class="icon" aria-hidden="true">4</div>
+          <strong>Retention toolkit</strong>
+          <p class="muted">Review funnel, seasonal offers, and follow-up ready for Make/Zapier.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="toolkit" class="scroll-margin">
+    <div class="wrap">
+      <h2>Retention Toolkit</h2>
+      <p class="section-lead muted">Every site includes conversion and follow-up tools you can plug into Make, Zapier, or Twilio later.</p>
+      <div class="toolkit-features">
+        <div class="toolkit-feature">
+          <strong>Instant lead capture</strong>
+          <p class="muted">Webhook-ready form. Paste your Make.com or Zapier URL in config and leads land in your CRM.</p>
+        </div>
+        <div class="toolkit-feature">
+          <strong>Review funnel</strong>
+          <p class="muted">4–5 stars → Google review link. 1–3 stars → private feedback so you can fix issues first.</p>
+        </div>
+        <div class="toolkit-feature">
+          <strong>Seasonal / referral offer page</strong>
+          <p class="muted">Discount page with opt-in and referral codes. Great for campaigns and past-customer outreach.</p>
+        </div>
+        <div class="toolkit-feature">
+          <strong>Automation-ready</strong>
+          <p class="muted">Connect forms to Make, Twilio, or Zapier when you’re ready. No lock-in.</p>
+        </div>
+      </div>
+      <div class="toolkit-buttons">
+        <a href="review.html" class="btn">Review Funnel</a>
+        <a href="discount.html" class="btn">Seasonal Offer</a>
+        <a href="privacy.html" class="btn">Privacy / SMS</a>
+      </div>
+    </div>
+  </section>
+
+  <section id="results" class="scroll-margin">
+    <div class="wrap">
+      <h2>What you get</h2>
+      <p class="section-lead muted">Built for speed and conversion.</p>
+      <div class="stats-grid">
+        <div class="stat-card">
+          <div class="value">Fast</div>
+          <p class="muted">Lightweight pages, no heavy frameworks</p>
+        </div>
+        <div class="stat-card">
+          <div class="value">Mobile-first</div>
+          <p class="muted">Looks great on every device</p>
+        </div>
+        <div class="stat-card">
+          <div class="value">SEO-ready</div>
+          <p class="muted">Titles, structure, and local pages</p>
+        </div>
+        <div class="stat-card">
+          <div class="value">Lead capture</div>
+          <p class="muted">Forms and CTAs that work</p>
+        </div>
+      </div>
+      <div class="testimonials-wrap">
+        <div class="testimonial-card">
+          <p class="quote">Placeholder: Replace with a real testimonial when you have one.</p>
+          <p class="by">— Client, Business type</p>
+        </div>
+        <div class="testimonial-card">
+          <p class="quote">Placeholder: Another testimonial slot. No fake claims.</p>
+          <p class="by">— Client, Business type</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="portfolio" class="scroll-margin">
+    <div class="wrap">
+      <h2>Portfolio</h2>
+      <p class="section-lead muted">Sample projects. Replace with real work when ready.</p>
+      <div class="portfolio-grid">
+        <div class="portfolio-card">
+          <div class="img-wrap">Project image</div>
+          <div class="body">
+            <div class="industry">Industry</div>
+            <p class="outcome">Outcome headline placeholder</p>
+          </div>
+        </div>
+        <div class="portfolio-card">
+          <div class="img-wrap">Project image</div>
+          <div class="body">
+            <div class="industry">Industry</div>
+            <p class="outcome">Outcome headline placeholder</p>
+          </div>
+        </div>
+        <div class="portfolio-card">
+          <div class="img-wrap">Project image</div>
+          <div class="body">
+            <div class="industry">Industry</div>
+            <p class="outcome">Outcome headline placeholder</p>
+          </div>
         </div>
       </div>
     </div>
@@ -124,21 +227,21 @@
   <section id="pricing" class="scroll-margin">
     <div class="wrap">
       <h2>Pricing</h2>
-      <p class="muted">Starting points. Final price depends on pages + features.</p>
-
-      <div class="grid two top16">
-        <div class="card">
+      <p class="section-lead muted">Starting points. Final price depends on pages and features.</p>
+      <div class="pricing-grid">
+        <div class="pricing-card">
           <strong>Starter</strong>
           <div class="price">$299+</div>
           <p class="muted">1-page site, contact form, mobile-first, SEO basics.</p>
+          <a class="btn primary tk-btn-quote" href="index.html#contact" data-tk-open-lead>Get Free Quote</a>
         </div>
-        <div class="card">
+        <div class="pricing-card">
           <strong>Business</strong>
           <div class="price">$599+</div>
           <p class="muted">More sections/pages, FAQs, stronger SEO structure.</p>
+          <a class="btn primary tk-btn-quote" href="index.html#contact" data-tk-open-lead>Get Free Quote</a>
         </div>
       </div>
-
       <p class="small top10">You can change prices later — this is just a placeholder.</p>
     </div>
   </section>
@@ -146,22 +249,19 @@
   <section id="contact" class="scroll-margin">
     <div class="wrap">
       <h2>Contact</h2>
-      <p class="muted">Tell me what you need and I’ll reply with next steps.</p>
-
+      <p class="section-lead muted">Tell me what you need and I’ll reply with next steps.</p>
       <div class="grid two top16">
         <div class="card">
           <strong>Call / Text</strong>
           <p class="muted top8"><a class="link tk-btn-call" href="#">Call</a> · <a href="#" class="link tk-text-us">Text us</a></p>
           <p class="muted">Best for quick quotes.</p>
         </div>
-
         <div class="card">
           <strong>Email</strong>
           <p class="muted top8">kwebdevelopmenttx@gmail.com</p>
           <p class="muted">Include: business name, city, services, and goal.</p>
         </div>
       </div>
-
       <div class="card top16">
         <strong>Quick message template</strong>
         <p class="muted top8">
@@ -169,77 +269,80 @@
           My budget is ___ and I’d like it live by ___.”
         </p>
       </div>
-
-      <p class="small top14">© <span id="yr"></span> KWebDevelopment • Texas</p>
+      <p class="top16"><a href="index.html#contact" class="btn primary tk-btn-quote" data-tk-open-lead>Get Free Quote</a></p>
+      <p class="small top14">© <span id="yr"></span> KWebDevelopment · Texas</p>
     </div>
   </section>
 </main>
 
 <footer>
-  <div class="wrap small">
-    Built by KWebDevelopment • TX / DFW
+  <div class="wrap">
+    <a href="privacy.html">Privacy</a>
+    <a href="review.html">Review</a>
+    <a href="discount.html">Offer</a>
+    <a href="#" class="btn primary tk-btn-quote" data-tk-open-lead>Get Free Quote</a>
+    <span class="small">Built by KWebDevelopment · TX / DFW</span>
   </div>
 </footer>
 
-  <!-- Lead modal (toolkit) -->
-  <div id="tk-lead-modal" class="tk-modal-overlay" aria-hidden="true" aria-modal="true" role="dialog" aria-labelledby="tk-lead-modal-title">
-    <div class="tk-modal">
-      <div class="tk-modal-header">
-        <h2 id="tk-lead-modal-title">Get a Free Quote</h2>
-        <button type="button" class="tk-modal-close" data-tk-close-lead aria-label="Close modal">&times;</button>
-      </div>
-      <div class="tk-modal-body">
-        <form id="tk-lead-form">
-          <div class="tk-form-group">
-            <label for="tk-lead-name">Name <span class="required">*</span></label>
-            <input type="text" id="tk-lead-name" name="name" required autocomplete="name" />
-          </div>
-          <div class="tk-form-group">
-            <label for="tk-lead-phone">Phone <span class="required">*</span></label>
-            <input type="tel" id="tk-lead-phone" name="phone" required autocomplete="tel" placeholder="(555) 123-4567" />
-          </div>
-          <div class="tk-form-group">
-            <label for="tk-lead-service">Service needed <span class="required">*</span></label>
-            <select id="tk-lead-service" name="serviceNeeded" required>
-              <option value="">Loading…</option>
-            </select>
-          </div>
-          <div class="tk-form-group">
-            <label for="tk-lead-zip">City or ZIP <span class="required">*</span></label>
-            <input type="text" id="tk-lead-zip" name="zipOrCity" required placeholder="Dallas or 75201" />
-          </div>
-          <div class="tk-form-group">
-            <label for="tk-lead-date">Preferred date</label>
-            <input type="date" id="tk-lead-date" name="preferredDate" />
-          </div>
-          <div class="tk-form-group">
-            <label for="tk-lead-time">Preferred time</label>
-            <input type="time" id="tk-lead-time" name="preferredTime" />
-          </div>
-          <div class="tk-form-group">
-            <label for="tk-lead-notes">Notes</label>
-            <textarea id="tk-lead-notes" name="notes" rows="3" placeholder="Brief description of your project"></textarea>
-          </div>
-          <div class="tk-form-group tk-checkbox-wrap">
-            <input type="checkbox" id="tk-lead-sms" name="smsConsent" />
-            <label for="tk-lead-sms">
-              <span class="tk-consent-text">By checking this box, you agree to receive text messages from us. Msg &amp; data rates may apply. Reply STOP to opt out.</span>
-            </label>
-          </div>
-          <div class="tk-submit-wrap">
-            <button type="submit" class="tk-btn-submit">Get Free Quote</button>
-          </div>
-          <div class="tk-message success" role="status"></div>
-          <div class="tk-message error" role="alert"></div>
-          <div class="tk-message not-configured" role="status"></div>
-        </form>
-      </div>
+<div id="tk-lead-modal" class="tk-modal-overlay" aria-hidden="true" aria-modal="true" role="dialog" aria-labelledby="tk-lead-modal-title">
+  <div class="tk-modal">
+    <div class="tk-modal-header">
+      <h2 id="tk-lead-modal-title">Get a Free Quote</h2>
+      <button type="button" class="tk-modal-close" data-tk-close-lead aria-label="Close modal">&times;</button>
+    </div>
+    <div class="tk-modal-body">
+      <form id="tk-lead-form">
+        <div class="tk-form-group">
+          <label for="tk-lead-name">Name <span class="required">*</span></label>
+          <input type="text" id="tk-lead-name" name="name" required autocomplete="name" />
+        </div>
+        <div class="tk-form-group">
+          <label for="tk-lead-phone">Phone <span class="required">*</span></label>
+          <input type="tel" id="tk-lead-phone" name="phone" required autocomplete="tel" placeholder="(555) 123-4567" />
+        </div>
+        <div class="tk-form-group">
+          <label for="tk-lead-service">Service needed <span class="required">*</span></label>
+          <select id="tk-lead-service" name="serviceNeeded" required>
+            <option value="">Loading…</option>
+          </select>
+        </div>
+        <div class="tk-form-group">
+          <label for="tk-lead-zip">City or ZIP <span class="required">*</span></label>
+          <input type="text" id="tk-lead-zip" name="zipOrCity" required placeholder="Dallas or 75201" />
+        </div>
+        <div class="tk-form-group">
+          <label for="tk-lead-date">Preferred date</label>
+          <input type="date" id="tk-lead-date" name="preferredDate" />
+        </div>
+        <div class="tk-form-group">
+          <label for="tk-lead-time">Preferred time</label>
+          <input type="time" id="tk-lead-time" name="preferredTime" />
+        </div>
+        <div class="tk-form-group">
+          <label for="tk-lead-notes">Notes</label>
+          <textarea id="tk-lead-notes" name="notes" rows="3" placeholder="Brief description of your project"></textarea>
+        </div>
+        <div class="tk-form-group tk-checkbox-wrap">
+          <input type="checkbox" id="tk-lead-sms" name="smsConsent" />
+          <label for="tk-lead-sms">
+            <span class="tk-consent-text">By checking this box, you agree to receive text messages from us. Msg &amp; data rates may apply. Reply STOP to opt out.</span>
+          </label>
+        </div>
+        <div class="tk-submit-wrap">
+          <button type="submit" class="tk-btn-submit">Get Free Quote</button>
+        </div>
+        <div class="tk-message success" role="status"></div>
+        <div class="tk-message error" role="alert"></div>
+        <div class="tk-message not-configured" role="status"></div>
+      </form>
     </div>
   </div>
+</div>
 
-  <div id="tk-fab-wrap" class="tk-fab-wrap" aria-hidden="true">
-    <a href="#" class="tk-fab" aria-label="Call us" title="Call">&#x260E;</a>
-  </div>
+<div id="tk-fab-wrap" class="tk-fab-wrap" aria-hidden="true">
+  <a href="#" class="tk-fab" aria-label="Call us" title="Call">&#x260E;</a>
+</div>
 
 <script src="assets/js/config.js"></script>
 <script src="assets/js/toolkit.js"></script>
