--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="icon" href="favicon.svg" type="image/svg+xml" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="assets/css/toolkit.css" />
+  <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet" />
 </head>
 <body>
 <header>
@@ -31,7 +32,7 @@
 
       <div class="nav-cta tk-nav-cta">
         <a class="btn tk-btn-call" href="#" data-tk-call>Call</a>
-        <a class="btn primary tk-btn-quote" href="#" data-tk-open-lead>Get Free Quote</a>
+        <a class="btn primary tk-btn-get-started" href="index.html#contact" data-tk-calendly>Get Started</a>
       </div>
     </nav>
   </div>
@@ -48,8 +49,13 @@
           and SEO basics so you can look legit and book more work.
         </p>
         <div class="cta-row">
-          <a class="btn primary tk-btn-quote" href="index.html#contact" data-tk-open-lead>Get Free Quote</a>
+          <a class="btn primary tk-btn-get-started" href="index.html#contact" data-tk-calendly>Get Started</a>
           <a class="btn tk-btn-call" href="#">Call</a>
+        </div>
+        <div class="how-it-works-row">
+          <span><strong>1.</strong> Tell us what you need</span>
+          <span><strong>2.</strong> Book a quick call</span>
+          <span><strong>3.</strong> Pick a plan + start</span>
         </div>
         <p class="muted top12">Email: kwebdevelopmenttx@gmail.com · <a href="privacy.html" class="link">Privacy</a></p>
       </div>
@@ -344,6 +350,7 @@
   <a href="#" class="tk-fab" aria-label="Call us" title="Call">&#x260E;</a>
 </div>
 
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
 <script src="assets/js/config.js"></script>
 <script src="assets/js/toolkit.js"></script>
 <script src="script.js"></script>
